@@ -99,4 +99,5 @@
   - [x] show message add message reactions 和 message buttons
   - [x] show message del sender_id, message_id
   - [x] add category show table
+  - [x] fix filter from global data
   - [ ] kol社群这块需要加个1. 各个判断标准和相应得分 2. 给项目方打广告的记录和次数 3. KOL的风格总结
